# ConwayGOLCPP

./: CMakeLists.txt  Readme.md
.github/workflows/: cmake.yml
cmake/: FindSDL2_IMAGE.cmake
src/: Conway.cpp  Conway.hpp  SDL_Handler.cpp  SDL_Handler.hpp  main.cpp
